--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,13 @@
     "require": {
         "vlucas/phpdotenv": "^5.6",
         "guzzlehttp/guzzle": "^7.9"
+    },
+    "require-dev": {
+        "pestphp/pest": "^3.7"
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     }
 }
